[gd_scene load_steps=6 format=3 uid="uid://b28jjmo04hfyx"]

[ext_resource type="Script" uid="uid://267nxri1lqh6" path="res://Scripts/game_over.gd" id="1_eoghk"]
[ext_resource type="Theme" uid="uid://c8ai6dk22gcrn" path="res://Resources/themenew.tres" id="1_ojehl"]
[ext_resource type="Texture2D" uid="uid://dy2ruat0sp6b0" path="res://Sprites/coin.PNG" id="2_ek8ke"]
[ext_resource type="Texture2D" uid="uid://bfbjnbpj60rbq" path="res://Sprites/trophy.png" id="3_eoghk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ek8ke"]
bg_color = Color(0, 0, 0.50980395, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="GameOver" type="Node2D"]
process_mode = 3
script = ExtResource("1_eoghk")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -303.0
offset_top = -274.625
offset_right = 303.0
offset_bottom = 274.625
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ojehl")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="CanvasLayer/Control/Panel"]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -251.5
offset_top = -41.07
offset_right = 251.5
offset_bottom = 61.93
grow_horizontal = 2
theme = ExtResource("1_ojehl")
text = "GAME OVER"
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="CanvasLayer/Control/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -224.0
offset_top = -189.0
offset_right = 224.0
offset_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ek8ke")
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/Panel/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5236382
anchor_bottom = 0.5525335
offset_left = -115.795
offset_top = -82.255
offset_right = -75.795074
offset_bottom = -42.254883
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ek8ke")
metadata/_edit_use_anchors_ = true

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/Control/Panel/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -131.0
offset_top = 3.7850037
offset_right = -53.0
offset_bottom = 74.78496
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_eoghk")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="record" type="Label" parent="CanvasLayer/Control/Panel/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = 17.0
offset_right = 55.0
offset_bottom = 67.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 49
text = "rrr"
metadata/_edit_use_anchors_ = true

[node name="coin" type="Label" parent="CanvasLayer/Control/Panel/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = -74.0
offset_right = 55.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 49
text = "Coin"
metadata/_edit_use_anchors_ = true

[node name="tryagain" type="Button" parent="CanvasLayer/Control/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.026402641
anchor_top = 0.9599454
anchor_right = 0.10231023
anchor_bottom = 0.9599454
offset_left = 64.0
offset_top = -132.625
offset_right = 257.0
offset_bottom = -60.625
grow_vertical = 0
theme = ExtResource("1_ojehl")
theme_override_font_sizes/font_size = 50
text = "TRY AGAIN"
flat = true
icon_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="home" type="Button" parent="CanvasLayer/Control/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.983614
anchor_right = 1.0
anchor_bottom = 0.983614
offset_left = -209.0
offset_top = -141.625
offset_right = -82.0
offset_bottom = -82.625
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 50
text = "home"
flat = true
metadata/_edit_use_anchors_ = true

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="pressed" from="CanvasLayer/Control/Panel/tryagain" to="." method="_on_tryagain_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Panel/home" to="." method="_on_home_pressed"]
